feat: Application dialogue